--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body {
     color: #333;
     text-align: center;
-    font-family: "Courier";
+    font-family: "Arial";
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -25,7 +25,7 @@ body {
 #container {
     width: 70%;
     padding: 1em;
-    text-align: left; 
+    text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
 }
